# condastats

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/workflows/: publish-to-pypi.yml  tests.yml
conda.recipe/condastats/: meta.yaml
condastats/: __init__.py  _core.py  _query.py  _version.py  cli.py
condastats/tests/: conftest.py  test_cli.py  test_condastats_overall.py  test_groupby.py  test_overall.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: condastats.rst  conf.py  explanation.rst  howto.rst  index.rst  installation.rst  tryit.rst  tutorial.rst
docs/source/_extra/try/: app.js  index.html  style.css
docs/source/reference/: api.rst  cli.rst
tests/: __init__.py  conftest.py  constants.py  test_cli.py  test_condastats.py  test_groupby.py  test_overall.py  test_query.py
